# maxio

./: .gitignore  Cargo.toml
client/: Cargo.toml
gateway/s3/: Cargo.toml
gateway/s3/src/: auth.rs  bucket_handler.rs  config.rs  main.rs  object_handler.rs  openapi.rs  server.rs
server/: Cargo.toml
server/src/: main.rs
server/src/bucket/: mod.rs
server/src/config/: mod.rs
server/src/max/: server.rs
server/src/metadata/: bucket_meta.rs  constant.rs  policy.rs
server/src/protocol/: frame.rs
src/: main.rs  state.rs
src/max/: mod.rs  server.rs
src/metadata/: config.rs  mod.rs
src/s3/: bucket_handler.rs  mod.rs  object_handler.rs  openapi.rs  server.rs
src/writer/: mod.rs  object_group.rs
