[package]
name = "maxio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
axum-extra = { version = "0.10.0" }
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1.41", features = ["default"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "default"] }
async-trait = "0.1.88"
figment = { version = "0.10.19", features = ["env", 'toml', 'serde_json'] }
dotenvy = "0.15.7"
uuid = { version = "1.17.0", features = ["v7", "v4", "zerocopy"] }
tower = "0.4"
rand = { version = "0.9" }
tower-http = { version = "0.6.6", features = ["trace"] }
utoipa = { version = "5", features = ["axum_extras", "debug", 'indexmap'] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
utoipa-axum = { version = "0.2", features = ["debug"] }
metrics-exporter-prometheus = "0.17"
axum-prometheus = "0.8"
base64 = "0.22.1"
sha2 = "0.10.9"
redb = "2.6.0"
bytes = "1.6"
anyhow = "1.0"
rmp-serde = "1.1"
xdg = "3.0.0"
hmac = "0.12"
hex = "0.4"
time = { version = "0.3", features = ["macros"] }
percent-encoding = "2.3"