[workspace]
members = [
    "client",
    'gateway/s3',
    "server"
]

[workspace.metadata]
name = "maxio"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = "1.45"
dotenvy = "0.15.7"
figment = "0.10.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json="1"
serde="1"
nject = "0.4"
anyhow = "1.0"